--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-    "name": "gitbook",
-    "version": "2.4.2",
+    "name": "gitbook-tlm",
+    "version": "5.0.0",
     "homepage": "https://www.gitbook.com",
     "description": "Library and cmd utility to generate GitBooks",
     "main": "lib/index.js",
